--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="static/images/libro.png">
-    <title>Bibliteca</title>
+    <title>Biblioteca</title>
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'plugins/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- page css -->
@@ -29,7 +29,8 @@
     <!-- Main wrapper - style you can find in pages.scss -->
     <!-- ============================================================== -->
     <section id="wrapper">
-        <div class="login-register" style="background-image:url(static/images/background/megamenubg.jpg);">
+        <div class="login-register" style="background-image:url(static/images/background/libro1.jpeg);">
+        
             <div class="login-box card">
                 <div class="card-body">
                     <form class="form-horizontal form-material" id="loginform"  method="POST">
