--- a/templates/book/index.html
+++ b/templates/book/index.html
@@ -3,20 +3,22 @@
 
 {% block contenido %}
 
+
 <!-- INICIO RADIO BUTTON -->
+
 <div class="container">
 	<div class="row">
 		<div class="col-4"></div>
 		<div class="col-4">
-			<div class="btn-group btn-group-toggle" data-toggle="buttons">
+			<div class="btn-group btn-group-toggle">
 			  	<label class="btn btn-secondary active">
-			    	<input type="radio" name="options" id="option1" autocomplete="off" checked> Active
+			    	<a href="{% url 'index' %}" class="">Intercambio</a>
 			  	</label>
 				<label class="btn btn-secondary">
-				    <input type="radio" name="options" id="option2" autocomplete="off"> Radio
+			    	<a href="{% url 'view_sales' %}" class="">Ventas</a>
 				</label>
 				<label class="btn btn-secondary">
-				    <input type="radio" name="options" id="option3" autocomplete="off"> Radio
+			    	<a href="{% url 'view_both' %}" class="">Ambos</a>
 				</label>
 			</div>
 		</div>
@@ -25,106 +27,24 @@
 </div>
 <!-- FIN RADIO BUTTON -->
 
-<div class="container">
+<div class="container m-4">
 	<div class="row">
-		<div class="col-4">
-			<div class="card" style="width: 18rem;">
-				<img class="card-img-top" src="..."alt="Card image cap">
-				<div class="card-body">
-				    <h5 class="card-title">Card title</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    <a href="#" class="btn btn-primary">Go somewhere</a>
-			  	</div>
+		{% for book in object_list %}
+			<div class="col-4">
+				<div class="card" style="width: 18rem;">
+					<img class="card-img-top" src="{{ book.picture.url }}" alt="Card image cap">
+					<div class="card-body">
+					    <h5 class="card-title">Título: {{book.title}} </h5>
+					    <p class="card-text">Autor/a: {{book.author}}</p>
+					    <p class="card-text">Editorial: {{book.editorial}}</p>
+
+					    <a style="text-decoration:none" href="{% url 'view_book' book.id %}" class="btn btn-primary">
+							<button class="dropdown-item" type="button">Ver libro</button>
+						</a>
+				  	</div>
+				</div>
 			</div>
-		</div>
+		{% endfor %}
 	</div>
 </div>
-
-
-
-
-
-
-<div class="card" style="width: 18rem;">
-	<img class="card-img-top" src="..." alt="Card image cap">
-	<div class="card-body">
-	    <h5 class="card-title">Card title</h5>
-	    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-	    <a href="#" class="btn btn-primary">Go somewhere</a>
-	</div>
-</div>
-
-<div class="card-columns">
-  	<div class="card">
-		<img class="card-img-top img-fluid" src="..." alt="Card image cap">
-		<div class="card-block">
-	  		<h4 class="card-title">Card title that wraps to a new line</h4>
-	  		<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		</div>
-  	</div>
-
-  <div class="card p-3">
-	<blockquote class="card-block card-blockquote">
-	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-	  <footer>
-		<small class="text-muted">
-		  Someone famous in <cite title="Source Title">Source Title</cite>
-		</small>
-	  </footer>
-	</blockquote>
-  </div>
-
-  <div class="card">
-	<img class="card-img-top img-fluid" src="..." alt="Card image cap">
-	<div class="card-block">
-	  <h4 class="card-title">Card title</h4>
-	  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-	  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-	</div>
-  </div>
-
-  <div class="card card-inverse card-primary p-3 text-center">
-	<blockquote class="card-blockquote">
-	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-	  <footer>
-		<small>
-		  Someone famous in <cite title="Source Title">Source Title</cite>
-		</small>
-	  </footer>
-	</blockquote>
-  </div>
-
-  <div class="card text-center">
-	<div class="card-block">
-	  <h4 class="card-title">Card title</h4>
-	  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-	  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-	</div>
-  </div>
-
-  <div class="card">
-	<img class="card-img img-fluid" src="..." alt="Card image">
-  </div>
-
-  <div class="card p-3 text-right">
-	<blockquote class="card-blockquote">
-	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-	  <footer>
-		<small class="text-muted">
-		  Someone famous in <cite title="Source Title">Source Title</cite>
-		</small>
-	  </footer>
-	</blockquote>
-  </div>
-
-  <div class="card">
-	<div class="card-block">
-	  <h4 class="card-title">Card title</h4>
-	  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-	  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-	</div>
-  </div>
-</div>
-
-
 {% endblock contenido %}
